tests/ui/main_signature.stderr
Error [E0122]: `main` takes no parameters and returns nothing
  --> tests/ui/main_signature.lex:1:4
    |
  1 | fn main(n: Int) {
    |    ^^^^
 Why: `main` is where running starts; nothing calls it with values
 Fix: write it as: fn main() { ... }
