tests/ui/main_signature.jet
fn main(n: Int) {
    print(n);
}
